Update dari ka sidik

--- a/admin_gudang/form_pengeluaran_material.html
+++ b/admin_gudang/form_pengeluaran_material.html
@@ -321,11 +321,28 @@
 													<td>Kabel NYM</td>
 													<td><i class="fa fa-check"> </i></td>
 													<td><i class="fa fa-check"> </i></td>
-													<td>54</td>
-													<td>40</td>
-													<td>14</td>
+													<td> 
+														<div class="input-group input-group-sm">
+															<input type="number" class="form-control m-input" value="100" aria-describedby="basic-addon2">
+														<div class="input-group-append"><span class="input-group-text" id="">m </span></div>
+														</div> 
+													</td>
 													<td>
-														<a href="#" class="btn btn-sm btn-secondary btn_hapus"; width:80px;">Hapus</a>
+														<div class="input-group input-group-sm">
+															<input type="number" class="form-control m-input" value="100" aria-describedby="basic-addon2">
+														<div class="input-group-append"><span class="input-group-text" id="">m </span></div>
+														</div>
+
+													</td>
+													<td>
+														<div class="input-group input-group-sm">
+															<input type="number" class="form-control m-input" value="100" aria-describedby="basic-addon2">
+														<div class="input-group-append"><span class="input-group-text" id="">m </span></div>
+														</div>
+														
+													</td>
+													<td>
+														<a href="#" class="btn btn-sm btn-secondary btn_hapus">Hapus</a>
 													</td>
 												</tr>
 											</tbody>
