--- a/admin_gudang/rincian_stock_kantor.html
+++ b/admin_gudang/rincian_stock_kantor.html
@@ -307,8 +307,8 @@
 											<thead>
 												<tr>
 													<th>Tanggal</th>
-													<th>Bon No</th>
-													<th>Keterangan</th>
+													<th>No Surat Jalan</th>
+													<th>Pemesan</th>
 													<th>Masuk</th>
 													<th>Keluar</th>
 													<th>Sisa</th>
@@ -449,11 +449,11 @@
 					format: 'DD/MM/YYYY',
 				},
 				{
-					field: 'Bon No',
+					field: 'No Surat Jalan',
 					textAlign: 'center',
 				},
 				{
-					field: 'Keterangan',
+					field: 'Pemesan',
 					textAlign: 'center',
 				},
 				{
