--- a/admin_gudang/barang_masuk.html
+++ b/admin_gudang/barang_masuk.html
@@ -280,70 +280,9 @@
 											</div>
 										</div>
 										<div class="tab-content">
-											<table class="table" id="tbl_list_barang_masuk">
-												<thead>
-													<tr>
-														<th>No</th>
-														<th>Tanggal</th>
-														<th>Kode</th>
-														<th>Nama Barang</th>
-														<th>Jumlah</th>
-														<th>Aksi</th>
-													</tr>
-												</thead>
-												<tbody>
-													<tr>
-														<td>1</td>
-														<td>20/19/2018</td>
-														<td>#14253617</td>
-														<td>Thermistor RKD25GVM</td>
-														<td>56</td>
-														<td>
-															<a href="proses_barang_masuk.html" class="btn btn-sm btn-success btn_material" style="color:white; width:80px;">proses</a>
-														</td>
-													</tr>
-													<tr>
-														<td>2</td>
-														<td>20/19/2018</td>
-														<td>#14253617</td>
-														<td>Thermistor RKD25GVM</td>
-														<td>56</td>
-														<td>
-															<a href="proses_barang_masuk.html" class="btn btn-sm btn-success btn_material" style="color:white; width:80px;">proses</a>
-														</td>
-													</tr>
-													<tr>
-														<td>3</td>
-														<td>20/19/2018</td>
-														<td>#14253617</td>
-														<td>Thermistor RKD25GVM</td>
-														<td>56</td>
-														<td>
-															<a href="proses_barang_masuk.html" class="btn btn-sm btn-success btn_material" style="color:white; width:80px;">proses</a>
-														</td>
-													</tr>
-													<tr>
-														<td>4</td>
-														<td>20/19/2018</td>
-														<td>#14253617</td>
-														<td>Thermistor RKD25GVM</td>
-														<td>56</td>
-														<td>
-															<a href="proses_barang_masuk.html" class="btn btn-sm btn-success btn_material" style="color:white; width:80px;">proses</a>
-														</td>
-													</tr>
-													<tr>
-														<td>5</td>
-														<td>20/19/2018</td>
-														<td>#14253617</td>
-														<td>Thermistor RKD25GVM</td>
-														<td>56</td>
-														<td>
-															<a href="proses_barang_masuk.html" class="btn btn-sm btn-success btn_material" style="color:white; width:80px;">proses</a>
-														</td>
-													</tr>
-												</tbody>
-											</table>>
+											<table class="table m-datatable" id="tbl_list_barang_masuk">
+												
+											</table>
 										</div>
 									</div>
 								</div>
@@ -384,76 +323,62 @@
 		<!--end::Page Vendors -->  
 		<!--begin::Page Snippets -->
 		<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
-		<script type="text/javascript">
-			var tbl_list_barang_masuk = $('#tbl_list_barang_masuk').mDatatable({
-				data: {
-					saveState: {cookie: false},
-						/*type: 'remote',
-				        source: {
-				          read: {
-				            // sample GET method
-				            method: 'GET',
-				            url: 'https://keenthemes.com/metronic/preview/inc/api/datatables/demos/default.php',
-				            map: function(raw) {
-				              // sample data mapping
-				              var dataSet = raw;
-				              if (typeof raw.data !== 'undefined') {
-				                dataSet = raw.data;
-				              }
-				              return dataSet;
-				            },
-				          },
-				        },
-				        pageSize: 10,
-				        serverPaging: true,
-				        serverFiltering: true,
-				        serverSorting: true,*/
-				    },
-				// layout definition
-				layout: {
-					theme: 'default', // datatable theme
-					class: '', // custom wrapper class
-					scroll: true, // enable/disable datatable scroll both horizontal and vertical when needed.
-					// height: 450, // datatable's body's fixed height
-					footer: false // display/hide footer
-				},
+		<script>
+			var datatable;
 
-				// column sorting
-				sortable: false,
-				search: {
-					input: $('#generalSearch'),
-				},
-				columns: [
+			$(document).ready(function() {
+				datatable = $('.m-datatable').mDatatable({
+					data: {
+						type: 'remote',
+						source: {
+							read: {
+								url: 'data/data.php' //Data dari database
+							}
+						},
+						serverPaging: true,
+						serverFiltering: true,
+						serverSorting: true
+					},
+					search: {
+						input: $('#generalSearch'),
+					},
+					columns: [
+					{
+						field: 'no',
+						title: 'No',
+						textAlign: 'center',
+						width: 50,
+						sortable: false,
+						template: function(row, rowIndex, datatable) {
+							return ((datatable.getCurrentPage() - 1) * datatable.getPageSize()) + rowIndex + 1;
+						}
+					}, {
+						field: 'tanggal',
+						title: 'Tanggal',
+						textAlign: 'center'
 
-				{
-					field: 'No',
-					textAlign: 'center',
-					width: 50
-				},
-				{
-					field: 'Tanggal',
-					textAlign: 'center',
-					type:'date',
-					format: 'DD/MM/YYYY',
-				},
-				{
-					field: 'Kode',
-					textAlign: 'center',
-				},
-				{
-					field: 'Nama Barang',
-					textAlign: 'center',
-				},
-				{
-					field: 'Jumlah',
-					textAlign: 'center',
-				},
-				{
-					field: 'Aksi',
-					textAlign: 'center',
-				}
-
-				],
+					}, {
+						field: 'kode_barang',
+						title: 'Kode',
+						textAlign: 'center'
+					}, {
+						field: 'nama_barang',
+						title: 'Nama Barang',
+						textAlign: 'center',
+					}, {
+						field: 'jumlah_barang',
+						title: 'Jumlah',
+						textAlign: 'center',
+					}, {
+						field: 'aksi',
+						title: 'Aksi',
+						textAlign: 'center',
+						template: function (row) {
+							return '<a href="proses_barang_masuk.html" class="btn btn-sm btn-success btn_material" style="color:white; width:80px;">proses</a>';
+						}
+					} 
+					]
+				});
 			});
 		</script>
 		<!--end::Page Snippets -->
