--- a/admin_gudang/print_pengeluaran_material.html
+++ b/admin_gudang/print_pengeluaran_material.html
@@ -113,6 +113,21 @@ License: You must have a valid license purchased only from themeforest(the above
 		.m-datatable__pager-info {
 			display: none;
 		}
+
+
+		th { 
+				background-color: #eaeaea;
+			}
+
+
+		@media print {
+			th {
+			background-color: #eaeaea;
+			-webkit-print-color-adjust: exact; 
+
+			}
+		}
+
 	</style>
 </head>
 <!-- end::Head -->
@@ -155,7 +170,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								<div class="m-portlet__body tablenya">
 									<!--begin: Datatable -->
 									<!-- <div class="m_datatable" id="local_data"></div> -->
-									<table class="table" id="tbl_material">
+									<table class="table" id="">
 										<thead>
 											<tr>
 												<th>No</th>
@@ -170,40 +185,39 @@ License: You must have a valid license purchased only from themeforest(the above
 										<tbody>
 											<tr>
 												<td>1</td>
-												<td><input disabled="" class="input_nama_material" type="text" name="nama_material" value="Pipa 1/4"></td>
+												<td>Pipa 1/4</td>
 												<td><i class="fa fa-check"> </i></td>
 												<td><i class="fa fa-check"> </i></td>
-												<td><input disabled="" class="input_material" type="text" name="pengeluaran_material" value="16"></td>
-												<td><input disabled="" class="input_material" type="text" name="retur_material" value="10"></td>
-												<td><input disabled="" class="input_material" type="text" name="total_material" value="6"></td>
+												<td>10</td>
+												<td>12</td>
+												<td>14</td>
 											</tr>
 											<tr>
 												<td>2</td>
-												<td><input disabled="" class="input_nama_material" type="text" name="nama_material" value="Pipa 1/2"></td>
+												<td>Pipa 1/2</td>
 												<td><i class="fa fa-check"> </i></td>
 												<td><i class="fa fa-check"> </i></td>
-												<td><input disabled="" class="input_material" type="text" name="pengeluaran_material" value="15"></td>
-												<td><input disabled="" class="input_material" type="text" name="retur_material" value="15"></td>
-												<td><input disabled="" class="input_material" type="text" name="total_material" value="0"></td>
+												<td>10</td>
+												<td>12</td>
+												<td>14</td>
 											</tr>
 											<tr>
 												<td>3</td>
-												<td><input disabled="" class="input_nama_material" type="text" name="nama_material" value="Kabel NYM"></td>
+												<td>Kabel NYM</td>
 												<td><i class="fa fa-check"> </i></td>
 												<td><i class="fa fa-check"> </i></td>
-												<td><input disabled="" class="input_material" type="text" name="pengeluaran_material" value="54"></td>
-												<td><input disabled="" class="input_material" type="text" name="retur_material" value="40"></td>
-												<td><input disabled="" class="input_material" type="text" name="total_material" value="14"></td>
+												<td>10</td>
+												<td>12</td>
+												<td>14</td>
 											</tr>
 											<tr>
 												<td>4</td>
-												<td><input disabled="" class="input_nama_material" type="text" name="nama_material" value="Daktif (lem)"></td>
+												<td>Daktif (lem)</td>
 												<td><i class="fa fa-check"> </i></td>
 												<td><i class="fa fa-check"> </i></td>
-												<td><input disabled="" class="input_material" type="text" name="pengeluaran_material" value="2"></td>
-												<td><input disabled="" class="input_material" type="text" name="retur_material" value="0"></td>
-												<td><input disabled="" class="input_material" type="text" name="total_material" value="2"></td>
-											</tr>
+												<td>10</td>
+												<td>12</td>
+												<td>14</td>
 										</tbody>
 									</table>
 									<div style="margin-left: 15%">
