--- a/admin_gudang/proses_barang_masuk.html
+++ b/admin_gudang/proses_barang_masuk.html
@@ -290,57 +290,8 @@
 											</div>
 										</div>
 										<div class="tab-content">
-											<table class="table" id="tbl_proses_barang_masuk">
-												<thead>
-													<tr>
-														<th>No</th>
-														<th>Kode</th>
-														<th>Nama Barang</th>
-														<th>Serial Number</th>
-													</tr>
-												</thead>
-												<tbody>
-													<tr>
-														<td>1</td>
-														<td>#14253617</td>
-														<td>Thermistor RKD25GVM</td>
-														<td>
-															<input required="" type="text" name="input_serial_number[]" class="form-control m-input" placeholder="">
-														</td>
-													</tr>
-													<tr>
-														<td>2</td>
-														<td>#14253617</td>
-														<td>Thermistor RKD25GVM</td>
-														<td>
-															<input required="" type="text" name="input_serial_number[]" class="form-control m-input" placeholder="">
-														</td>
-													</tr>
-													<tr>
-														<td>3</td>
-														<td>#14253617</td>
-														<td>Thermistor RKD25GVM</td>
-														<td>
-															<input required="" type="text" name="input_serial_number[]" class="form-control m-input" placeholder="">
-														</td>
-													</tr>
-													<tr>
-														<td>4</td>
-														<td>#14253617</td>
-														<td>Thermistor RKD25GVM</td>
-														<td>
-															<input required="" type="text" name="input_serial_number[]" class="form-control m-input" value="23942-34-98923">
-														</td>
-													</tr>
-													<tr>
-														<td>5</td>
-														<td>#14253617</td>
-														<td>Thermistor RKD25GVM</td>
-														<td>
-															<input required="" type="text" name="input_serial_number[]" class="form-control m-input" value="23942-34-98923">
-														</td>
-													</tr>
-												</tbody>
+											<table class="table m-datatable" id="tbl_proses_barang_masuk">
+												
 											</table>
 											<div align="center">
 												<button type="submit" id="btn_simpan" class="btn btn-success">Simpan</button>	
@@ -385,69 +336,52 @@
 		<!--end::Page Vendors -->  
 		<!--begin::Page Snippets -->
 		<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
-		<script type="text/javascript">
-			var tbl_proses_barang_masuk = $('#tbl_proses_barang_masuk').mDatatable({
-				data: {
-					saveState: {cookie: false},
-						/*type: 'remote',
-				        source: {
-				          read: {
-				            // sample GET method
-				            method: 'GET',
-				            url: 'https://keenthemes.com/metronic/preview/inc/api/datatables/demos/default.php',
-				            map: function(raw) {
-				              // sample data mapping
-				              var dataSet = raw;
-				              if (typeof raw.data !== 'undefined') {
-				                dataSet = raw.data;
-				              }
-				              return dataSet;
-				            },
-				          },
-				        },
-				        pageSize: 10,
-				        serverPaging: true,
-				        serverFiltering: true,
-				        serverSorting: true,*/
-				    },
-				// layout definition
-				layout: {
-					theme: 'default', // datatable theme
-					class: '', // custom wrapper class
-					scroll: true, // enable/disable datatable scroll both horizontal and vertical when needed.
-					// height: 450, // datatable's body's fixed height
-					footer: false // display/hide footer
-				},
-
-				// column sorting
-				sortable: false,
-				search: {
-					input: $('#generalSearch'),
-				},
-				columns: [
-
-				{
-					field: 'No',
-					textAlign: 'center',
-					width: 50
-				},
-				{
-					field: 'Kode',
-					textAlign: 'center',
-				},
-				{
-					field: 'Nama Barang',
-					textAlign: 'center',
-				},
-				{
-					field: 'Gudang',
-					textAlign: 'center',
-				},
-				{
-					field: 'Serial Number',
-					textAlign: 'center',
-				}
-				],
+		<script>
+			var datatable;
+			$(document).ready(function() {
+				datatable = $('.m-datatable').mDatatable({
+					data: {
+						type: 'remote',
+						source: {
+							read: {
+								url: 'data/proses-barang.php' //Data dari database
+							}
+						},
+						serverPaging: true,
+						serverFiltering: true,
+						serverSorting: true
+					},
+					search: {
+						input: $('#generalSearch'),
+					},
+					columns: [
+					{
+						field: 'no',
+						title: 'No',
+						textAlign: 'center',
+						width: 50,
+						sortable: false,
+						template: function(row, rowIndex, datatable) {
+							return ((datatable.getCurrentPage() - 1) * datatable.getPageSize()) + rowIndex + 1;
+						}
+					},  {
+						field: 'kode_barang',
+						title: 'Kode',
+						textAlign: 'center'
+					}, {
+						field: 'nama_barang',
+						title: 'Nama Barang',
+						textAlign: 'center',
+					}, {
+						field: 'serial_number',
+						title: 'Serial Number',
+						textAlign: 'center',
+						template: function (row) {
+							return '<input required="" type="text" name="input_serial_number[]" class="form-control m-input" placeholder="">';
+						}
+					} 
+					]
+				});
 			});
 		</script>
 		<!--end::Page Snippets -->
