--- a/admin_gudang/rincian_pengeluaran_material.html
+++ b/admin_gudang/rincian_pengeluaran_material.html
@@ -314,39 +314,40 @@
 													<tbody>
 														<tr>
 															<td>1</td>
-															<td><input disabled="" class="input_nama_material" type="text" name="nama_material" value="Pipa 1/4"></td>
+															<td>Pipa 1/4</td>
 															<td><i class="fa fa-check"> </i></td>
 															<td><i class="fa fa-check"> </i></td>
-															<td><input disabled="" class="input_material" type="text" name="pengeluaran_material" value="16"></td>
-															<td><input disabled="" class="input_material" type="text" name="retur_material" value="10"></td>
-															<td><input disabled="" class="input_material" type="text" name="total_material" value="6"></td>
+															<td>10</td>
+															<td>12</td>
+															<td>14</td>
+
 														</tr>
 														<tr>
 															<td>2</td>
-															<td><input disabled="" class="input_nama_material" type="text" name="nama_material" value="Pipa 1/2"></td>
+															<td>Pipa 1/2</td>
 															<td><i class="fa fa-check"> </i></td>
 															<td><i class="fa fa-check"> </i></td>
-															<td><input disabled="" class="input_material" type="text" name="pengeluaran_material" value="15"></td>
-															<td><input disabled="" class="input_material" type="text" name="retur_material" value="15"></td>
-															<td><input disabled="" class="input_material" type="text" name="total_material" value="0"></td>
+															<td>10</td>
+															<td>12</td>
+															<td>14</td>
 														</tr>
 														<tr>
 															<td>3</td>
-															<td><input disabled="" class="input_nama_material" type="text" name="nama_material" value="Kabel NYM"></td>
+															<td>Kabel NYM</td>
 															<td><i class="fa fa-check"> </i></td>
 															<td><i class="fa fa-check"> </i></td>
-															<td><input disabled="" class="input_material" type="text" name="pengeluaran_material" value="54"></td>
-															<td><input disabled="" class="input_material" type="text" name="retur_material" value="40"></td>
-															<td><input disabled="" class="input_material" type="text" name="total_material" value="14"></td>
+															<td>10</td>
+															<td>12</td>
+															<td>14</td>
 														</tr>
 														<tr>
 															<td>4</td>
-															<td><input disabled="" class="input_nama_material" type="text" name="nama_material" value="Daktif (lem)"></td>
+															<td>Daktif (lem)</td>
 															<td><i class="fa fa-check"> </i></td>
 															<td><i class="fa fa-check"> </i></td>
-															<td><input disabled="" class="input_material" type="text" name="pengeluaran_material" value="2"></td>
-															<td><input disabled="" class="input_material" type="text" name="retur_material" value="0"></td>
-															<td><input disabled="" class="input_material" type="text" name="total_material" value="2"></td>
+															<td>10</td>
+															<td>12</td>
+															<td>14</td>
 														</tr>
 													</tbody>
 												</table>
