--- a/admin_gudang/tambah_surat_jalan.html
+++ b/admin_gudang/tambah_surat_jalan.html
@@ -432,33 +432,8 @@
 											<button style="width: 200px"  data-toggle="modal" data-target="#modal_tambah_item" type="button" class="btn btn-success">Tambah Item</button>	
 										</div>
 									</div>
-									<table class="table" id="tbl_item_pesanan">
-										<thead>
-											<tr>
-												<th>No</th>
-												<th>Nama Barang</th>
-												<th>Jumlah(unit)</th>
-												<th>Aksi</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>1</td>
-												<td>AC Split 1/2 PK daikin R32 Non Inverter Thailand</td>
-												<td>2</td>
-												<td>
-													<a class="btn btn-sm btn-secondary btn_hapus" style="color:black; width:80px;">Hapus</a>
-												</td>
-											</tr>
-											<tr>
-												<td>2</td>
-												<td>AC Split 1 PK daikin R32 Non Inverter Thailand</td>
-												<td>1</td>
-												<td>
-													<a class="btn btn-sm btn-secondary btn_hapus" style="color:black; width:80px;">Hapus</a>
-												</td>
-											</tr>
-										</tbody>
+									<table class="table m-datatable-item" id="tbl_item_pesanan">
+			
 									</table>
 								</div>
 								<div style="margin-top: 50px;" class="list_item_Material">
@@ -472,33 +447,8 @@
 											<button style="width: 200px;"  data-toggle="modal" data-target="#modal_tambah_material" type="button" class="btn btn-success">Tambah Material</button>	
 										</div>
 									</div>
-									<table class="table" id="tbl_item_material">
-										<thead>
-											<tr>
-												<th>No</th>
-												<th>Nama Material</th>
-												<th>Jumlah</th>
-												<th>Aksi</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>1</td>
-												<td>Material A</td>
-												<td>2</td>
-												<td>
-													<a class="btn btn-sm btn-secondary btn_hapus" style="color:black; width:80px;">Hapus</a>
-												</td>
-											</tr>
-											<tr>
-												<td>2</td>
-												<td>Material B</td>
-												<td>1</td>
-												<td>
-													<a class="btn btn-sm btn-secondary btn_hapus" style="color:black; width:80px;">Hapus</a>
-												</td>
-											</tr>
-										</tbody>
+									<table class="table m-datatable-material" id="tbl_item_material">
+										
 									</table>
 									<div align="center">
 										<button style="margin-top: 50px" id="btn_terbitkan_surat_jalan" type="button" class="btn btn-primary btn_pemasangan">Terbitkan Surat Jalan</button>
@@ -668,146 +618,7 @@
 
 <!--end::Page Snippets -->
 <script src="http://localhost:35729/livereload.js"></script>
-<script type="text/javascript">
-	var tbl_item_pesanan = $('#tbl_item_pesanan').mDatatable({
-		data: {
-			saveState: {cookie: false},
-					/*type: 'remote',
-			        source: {
-			          read: {
-			            // sample GET method
-			            method: 'GET',
-			            url: 'https://keenthemes.com/metronic/preview/inc/api/datatables/demos/default.php',
-			            map: function(raw) {
-			              // sample data mapping
-			              var dataSet = raw;
-			              if (typeof raw.data !== 'undefined') {
-			                dataSet = raw.data;
-			              }
-			              return dataSet;
-			            },
-			          },
-			        },
-			        pageSize: 10,
-			        serverPaging: true,
-			        serverFiltering: true,
-			        serverSorting: true,*/
-			    },
-				// layout definition
-				layout: {
-					theme: 'default', // datatable theme
-					class: '', // custom wrapper class
-					scroll: false, // enable/disable datatable scroll both horizontal and vertical when needed.
-					// height: 450, // datatable's body's fixed height
-					footer: false // display/hide footer
-				},
 
-				// column sorting
-				sortable: false,
-				search: {
-					input: $('#generalSearch'),
-				},
-				columns: [
-
-				{
-					field: 'No',
-					textAlign: 'center',
-				},
-				{
-					field: 'Nama Barang',
-					textAlign: 'center',
-				},
-				{
-					field: 'Jumlah(unit)',
-					textAlign: 'center',
-				},
-				{
-					field: 'Aksi',
-					textAlign: 'center',
-				}
-
-				],
-			});
-		</script>
-		<script type="text/javascript">
-			var tbl_item_material = $('#tbl_item_material').mDatatable({
-				data: {
-					saveState: {cookie: false},
-					/*type: 'remote',
-			        source: {
-			          read: {
-			            // sample GET method
-			            method: 'GET',
-			            url: 'https://keenthemes.com/metronic/preview/inc/api/datatables/demos/default.php',
-			            map: function(raw) {
-			              // sample data mapping
-			              var dataSet = raw;
-			              if (typeof raw.data !== 'undefined') {
-			                dataSet = raw.data;
-			              }
-			              return dataSet;
-			            },
-			          },
-			        },
-			        pageSize: 10,
-			        serverPaging: true,
-			        serverFiltering: true,
-			        serverSorting: true,*/
-			    },
-				// layout definition
-				layout: {
-					theme: 'default', // datatable theme
-					class: '', // custom wrapper class
-					scroll: false, // enable/disable datatable scroll both horizontal and vertical when needed.
-					// height: 450, // datatable's body's fixed height
-					footer: false // display/hide footer
-				},
-
-				// column sorting
-				sortable: false,
-				search: {
-					input: $('#generalSearch'),
-				},
-				columns: [
-
-				{
-					field: 'No',
-					textAlign: 'center',
-				},
-				{
-					field: 'Nama Material',
-					textAlign: 'center',
-				},
-				{
-					field: 'Jumlah',
-					textAlign: 'center',
-				},
-				{
-					field: 'Aksi',
-					textAlign: 'center',
-				}
-
-				],
-			});
-		</script>
-		<script>
-			$('.btn_hapus').click(function(e) {
-				swal({
-					title: 'Apakah anda yakin menghapus item ini?',
-					type: 'warning',
-					showCancelButton: true,
-					confirmButtonText: 'Ya,Hapus!'
-				}).then(function(result) {
-					if (result.value) {
-						swal(
-							'Dihapus!',
-							'item telah dihapus dari list',
-							'success'
-							)
-					}
-				});
-			});
-		</script>
 		<script>
 			//== Class definition
 			var SweetAlert2Demo = function() {
@@ -865,6 +676,128 @@
 			//== Initialization
 			jQuery(document).ready(function() {
 				Select2.init();
+			});
+		</script>
+		<script>
+			var datatable;
+
+			$(document).ready(function() {
+				datatable = $('.m-datatable-item').mDatatable({
+					data: {
+						type: 'remote',
+						source: {
+							read: {
+								url: 'data/list-item.php' //Data dari database
+							}
+						},
+						serverPaging: true,
+						serverFiltering: true,
+						serverSorting: true
+					},
+					search: {
+						input: $('#generalSearch'),
+					},
+					columns: [
+					{
+						field: 'no',
+						title: 'No',
+						textAlign: 'center',
+						width: 50,
+						sortable: false,
+						template: function(row, rowIndex, datatable) {
+							return ((datatable.getCurrentPage() - 1) * datatable.getPageSize()) + rowIndex + 1;
+						}
+					}, {
+						field: 'nama_item',
+						title: 'Nama Item',
+						textAlign: 'center',
+						width : 300
+
+					}, {
+						field: 'jumlah_item',
+						title: 'Jumlah (Unit)',
+						textAlign: 'center',
+						width : 60
+					},  {
+						field: 'aksi',
+						title: 'Aksi',
+						textAlign: 'center',
+						template: function (row) {
+							return '<a class="btn btn-sm btn-secondary btn_hapus" style="color:black; width:80px;" data-id="'+row.id+'">Hapus</a>';
+						}
+					} 
+					]
+				});
+			});
+		</script>
+		<script>
+			var datatable;
+
+			$(document).ready(function() {
+				datatable = $('.m-datatable-material').mDatatable({
+					data: {
+						type: 'remote',
+						source: {
+							read: {
+								url: 'data/list-material.php' //Data dari database
+							}
+						},
+						serverPaging: true,
+						serverFiltering: true,
+						serverSorting: true
+					},
+					search: {
+						input: $('#generalSearch'),
+					},
+					columns: [
+					{
+						field: 'no',
+						title: 'No',
+						textAlign: 'center',
+						width: 50,
+						sortable: false,
+						template: function(row, rowIndex, datatable) {
+							return ((datatable.getCurrentPage() - 1) * datatable.getPageSize()) + rowIndex + 1;
+						}
+					}, {
+						field: 'nama_material',
+						title: 'Nama material',
+						textAlign: 'center',
+						width : 300
+
+					}, {
+						field: 'jumlah_material',
+						title: 'Jumlah',
+						textAlign: 'center',
+						width: 60
+					},  {
+						field: 'aksi',
+						title: 'Aksi',
+						textAlign: 'center',
+						template: function (row) {
+							return '<a class="btn btn-sm btn-secondary btn_hapus" style="color:black; width:80px;" data-id="'+row.id+'">Hapus</a>';
+						}
+					} 
+					]
+				});
+			});
+		</script>
+		<script>
+			$(document).on('click','.btn_hapus',function(e) {
+				swal({
+					title: 'Apakah anda yakin menghapus item ini?',
+					type: 'warning',
+					showCancelButton: true,
+					confirmButtonText: 'Ya,Hapus!'
+				}).then(function(result) {
+					if (result.value) {
+						swal(
+							'Dihapus!',
+							'item telah dihapus dari list',
+							'success'
+							)
+					}
+				});
 			});
 		</script>
 	</body>
