update halaman penawaran admin toko/admin kantor

--- a/admin_gudang/barang_masuk.html
+++ b/admin_gudang/barang_masuk.html
@@ -356,6 +356,10 @@
 						field: 'tanggal',
 						title: 'Tanggal',
 						textAlign: 'center'
+					}, {
+						field: 'tipe_gudang',
+						title: 'Gudang',
+						textAlign: 'center'
 
 					}, {
 						field: 'kode_barang',
