--- a/admin_kantor/master_stock.html
+++ b/admin_kantor/master_stock.html
@@ -330,7 +330,7 @@
 													List Stock
 												</h3>
 												<div>
-													<button style="margin-top: 15px;margin-left: 30px" class="btn btn-primary" data-toggle="modal" data-target="#m_tambah_stock">
+													<button  style="margin-top: 15px;margin-left: 30px; display: none" class="btn btn-primary" data-toggle="modal" data-target="#m_tambah_stock">
 														tambah stock
 													</button>
 												</div>
