--- a/admin_kantor/tambah_surat_jalan.html
+++ b/admin_kantor/tambah_surat_jalan.html
@@ -16,7 +16,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>
-		Admin kantor | Tambah SPK Pemasangan
+		Admin Toko | Tambah SPK Pemasangan
 	</title>
 	<meta name="description" content="Latest updates and statistic charts">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -100,7 +100,7 @@
 						<div class="m-stack__item m-stack__item--fluid m-header-head" id="m_header_nav">
 							<!-- BEGIN: Horizontal Menu -->
 							<div id="m_header_menu" class="m-header-menu m-aside-header-menu-mobile m-aside-header-menu-mobile--offcanvas  m-header-menu--skin-light m-header-menu--submenu-skin-light m-aside-header-menu-mobile--skin-dark m-aside-header-menu-mobile--submenu-skin-dark "  >
-								<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/admin_kantor.png">
+								<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/admin_toko.png">
 							</div>
 							<!-- END: Horizontal Menu -->								
 							<!-- BEGIN: Topbar -->
