--- a/admin_gudang/master_stock.html
+++ b/admin_gudang/master_stock.html
@@ -410,6 +410,7 @@
 												<thead>
 													<tr>
 														<th>No</th>
+														<th>Kategori</th>
 														<th>Kode</th>
 														<th>Nama Barang</th>
 														<th>Tipe</th>
@@ -422,6 +423,7 @@
 												<tbody>
 													<tr>
 														<td>1</td>
+														<td>Unit</td>
 														<td>#14253617</td>
 														<td>Thermistor RKD25GVM</td>
 														<td>Thermistor</td>
@@ -432,6 +434,7 @@
 													</tr>
 													<tr>
 														<td>2</td>
+														<td>Material</td>
 														<td>#14253617</td>
 														<td>Thermistor RKD25GVM</td>
 														<td>Thermistor</td>
@@ -442,6 +445,7 @@
 													</tr>
 													<tr>
 														<td>3</td>
+														<td>Jasa</td>
 														<td>#14253617</td>
 														<td>Thermistor RKD25GVM</td>
 														<td>Thermistor</td>
@@ -452,6 +456,7 @@
 													</tr>
 													<tr>
 														<td>4</td>
+														<td>Sparepart</td>
 														<td>#14253617</td>
 														<td>Thermistor RKD25GVM</td>
 														<td>Thermistor</td>
@@ -462,6 +467,7 @@
 													</tr>
 													<tr>
 														<td>5</td>
+														<td>Sparepart</td>
 														<td>#14253617</td>
 														<td>Thermistor RKD25GVM</td>
 														<td>Thermistor</td>
@@ -594,6 +600,11 @@
 					type:'date',
 					format: 'DD/MM/YYYY',
 					width: 50
+				},
+				{
+					field: 'Kategori',
+					textAlign: 'center',
+						
 				},
 				{
 					field: 'Kode',
