--- a/admin_gudang/rincian_stock_barang.html
+++ b/admin_gudang/rincian_stock_barang.html
@@ -9,13 +9,13 @@
 	Like: www.facebook.com/keenthemes
 	Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
 	Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-	License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project. -->
+	License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.-->
 	<html lang="en" >
 	<!-- begin::Head -->
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Admin kantor | Rincian Nota
+			Admin Gudang | Rinican Stock Kantor
 		</title>
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,28 +43,6 @@
 		<!-- end:: Style tambahan -->
 		<!--end::Base Styles -->
 		<link rel="shortcut icon" href="../assets/demo/default/media/img/logo/favicon.ico" />
-		<style>
-			.m-datatable.m-datatable--default > .m-datatable__pager > .m-datatable__pager-info {
-				display: none !important;
-			}
-		</style>
-		<style>
-			.m-datatable.m-datatable--default > .m-datatable__pager > .m-datatable__pager-info {
-				display: none !important;
-			}
-			.tg  {border-collapse:collapse;border-spacing:0;}
-			.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-			.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:black;}
-			.tg .tg-s268{
-				text-align:center;
-				font-size: 1.2rem;
-				font-weight: 600;
-			}
-			.tlu {
-				border-top: transparent !important;
-			}
-
-		</style>
 	</head>
 	<!-- end::Head -->
 	<!-- end::Body -->
@@ -112,7 +90,7 @@
 							<div class="m-stack__item m-stack__item--fluid m-header-head" id="m_header_nav">
 								<!-- BEGIN: Horizontal Menu -->
 								<div id="m_header_menu" class="m-header-menu m-aside-header-menu-mobile m-aside-header-menu-mobile--offcanvas  m-header-menu--skin-light m-header-menu--submenu-skin-light m-aside-header-menu-mobile--skin-dark m-aside-header-menu-mobile--submenu-skin-dark "  >
-									<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/admin_kantor.png">
+									<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/Asset 5@2x.png">
 								</div>
 								<!-- END: Horizontal Menu -->								
 								<!-- BEGIN: Topbar -->
@@ -165,99 +143,66 @@
 									</span>
 								</a>
 							</li>
-							<!-- Manajemen Pelanggan -->
-							<li class="m-menu__item  " aria-haspopup="true" >
-								<a  href="manajemen_pelanggan.html" class="m-menu__link ">
-									<i class="m-menu__link-icon fa 	fa-user-circle-o"></i>
+							<!-- Barang Masuk -->
+							<li class="m-menu__item" aria-haspopup="true" >
+								<a  href="barang_masuk.html" class="m-menu__link ">
+									<i class="m-menu__link-icon fa fa-shopping-cart"></i>
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
-												Manajemen	Pelanggan
+												Barang Masuk
 											</span>
 										</span>
 									</span>
 								</a>
 							</li>
-							<!-- Manajemen Pesanan-->
-							<li class="m-menu__item m-menu__item--submenu" aria-haspopup="true" data-menu-submenu-toggle="hover">
-								<a href="#" class="m-menu__link m-menu__toggle">
-									<i class="m-menu__link-icon flaticon-folder-2"></i>
-									<span class="m-menu__link-text">
-										Manajemen Pesanan
-									</span>
-									<i style="font-size: 1.5rem" class="m-menu__ver-arrow fa fa-caret-right"></i>
-								</a>
-								<div class="m-menu__submenu " style="">
-									<span class="m-menu__arrow"></span>
-									<ul class="m-menu__subnav">
-										<li class="m-menu__item  m-menu__item--parent" aria-haspopup="true">
-											<span class="m-menu__link">
-												<span class="m-menu__link-text">
-													Pesanan
-												</span>
-											</span>
-										</li>
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_pemasangan.html" class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Pemasangan
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_servis.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Servis
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_free.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Free
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_komplain.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Komplain
-												</span>
-											</a>
-										</li>
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="spk_survey.html"  class="m-menu__link ">
-												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
-													<span></span>
-												</i>
-												<span class="m-menu__link-text">
-													SPK Survey
-												</span>
-											</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-							<!-- Manajemen Penawaran -->
+							<!-- Surat jalan-->
 							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="manajemen_penawaran.html" class="m-menu__link ">
-									<i class="m-menu__link-icon fa 	fa-handshake-o"></i>
+								<a  href="surat_jalan.html" class="m-menu__link ">
+									<i class="m-menu__link-icon flaticon-transport"></i>
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
-												Manajemen Penawaran
+												Surat jalan
+											</span>
+										</span>
+									</span>
+								</a>
+							</li>
+							<!-- Pengeluaran Material -->
+							<li class="m-menu__item" aria-haspopup="true" >
+								<a  href="pengeluaran_material.html" class="m-menu__link ">
+									<i class="m-menu__link-icon la 	la-stack-overflow"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
+											<span class="m-menu__link-text">
+												Pengeluaran Material
+											</span>
+										</span>
+									</span>
+								</a>
+							</li>
+							<!-- Inventory-->
+							<li class="m-menu__item" aria-haspopup="true" >
+								<a  href="inventory.html" class="m-menu__link ">
+									<i class="m-menu__link-icon fa 	fa-cube"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
+											<span class="m-menu__link-text">
+												Inventory
+											</span>
+										</span>
+									</span>
+								</a>
+							</li>
+							<!-- Stock -->
+							<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
+								<a  href="stock.html" class="m-menu__link ">
+									<i class="m-menu__link-icon flaticon-list-1"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
+											<span class="m-menu__link-text">
+												Manajemen Stock
 											</span>
 										</span>
 									</span>
@@ -266,42 +211,16 @@
 							<!-- Master Stock -->
 							<li class="m-menu__item" aria-haspopup="true" >
 								<a  href="master_stock.html" class="m-menu__link ">
-									<i class="m-menu__link-icon flaticon-list-1"></i>
+									<i class="m-menu__link-icon flaticon-open-box"></i>
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
-												Master Stock
+												Master stock
 											</span>
 										</span>
 									</span>
 								</a>
-							</li>
-							<!-- Harga Item dan Jasa -->
-							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="manajemen_harga.html" class="m-menu__link ">
-									<i class="m-menu__link-icon la la-list"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												Manajemen Harga
-											</span>
-										</span>
-									</span>
-								</a>
-							</li>
-							<!-- Manajemen Pembayaran -->
-							<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
-								<a  href="manajemen_pembayaran.html" class="m-menu__link ">
-									<i class="m-menu__link-icon flaticon-file-1"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												manajemen pembayaran
-											</span>
-										</span>
-									</span>
-								</a>
-							</li>
+							</li>	
 						</ul>
 					</div>
 					<!-- END: Aside Menu -->
@@ -313,7 +232,7 @@
 						<div class="d-flex align-items-center">
 							<div class="mr-auto">
 								<h3 class="m-subheader__title m-subheader__title--separator">
-									Rincian Nota
+									Stock
 								</h3>
 								<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 									<li class="m-nav__item m-nav__item--home">
@@ -325,9 +244,9 @@
 										-
 									</li>
 									<li class="m-nav__item">
-										<a href="manajemen_pembayaran.html" class="m-nav__link">
+										<a href="stock.html" class="m-nav__link">
 											<span class="m-nav__link-text">
-												Manajemen Pembayaran
+												Stock
 											</span>
 										</a>
 									</li>
@@ -335,7 +254,7 @@
 										-
 									</li>
 									<li class="m-nav__item">
-										<a href="rincian_nota.html" class="m-nav__link">
+										<a href="rincian_stock_kantor.html" class="m-nav__link">
 											<span class="m-nav__link-text">
 												Rincian
 											</span>
@@ -349,144 +268,66 @@
 					<div class="m-content">
 						<div class="row">
 							<div class="col-xl-12">
-								<div class="m-portlet m-portlet--mobile">
-									<div class="m-portlet__head header">
-										<h2 style="margin-top: 30px" align="left" class="header-pesanan">
-											Invoice Sukses Sejuk Mandiri
-										</h2><br>
-										<button onclick="window.location.href='print_nota.html'" style="padding: 5px;width: 200px" class="btn btn-primary">
-											Print Nota
-										</button>
-										<h3 name="no_invoice" class="header-pesanan-no"> 
-											<i class="fa fa-check-circle"> </i> 0037/SSM/SPK-PSG/MKS/III/2019
-										</h3><br><br>
-										<div class="info row">
-											<div class="col-sm">
-												<p id="tanggal_surat">
-													<i class="flaticon-calendar-2"> </i>20/11/19
-												</p> 
-												<p id="nama_pelanggan">
-													<i class="flaticon-users"> </i> Ahmad Rifaldi
-												</p>
-												<p id="no_telpon">
-													<i class="fa fa-phone"> </i> 085-145-322-137
-												</p>
-												<p>Tipe Pajak : <span id="tipe_pajak">Non-Pajak</span></p>
-											</div>
-											<div style="margin-bottom: 10px" class="col-sm">
-												<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
-												<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
-												<p>No. Faktur Pajak : <span id="no_faktur_pajak">123</span></p>
-												<div class="form-group m-form__group row">
-													<label for="example-search-input" class="col-2 col-form-label">
-														Norek :
-													</label>
-													<div  class="col-10">
-														<select style="width: 230px" class="form-control m-input m-input--square" id="norek_bank">
-															<option value="0">
-																--Pilih Bank--
-															</option>
-															<option value="1">
-																BCA | 797-038-5678
-															</option>
-															<option value="2">
-																BCA | 797-013-3393
-															</option>
-															<option value="3">
-																BPD | 130003302363
-															</option>
-															<option value="4">
-																BRI | 022501001344308
-															</option>
-														</select>
+								<div class="m-portlet">
+									<div class="m-portlet__head">
+										<div class="m-portlet__head-caption">
+											<div class="m-portlet__head-title col-xl-12">
+												<div style="margin-top: 20px" class=" row">
+													<div class="col-sm">
+														<h3 class="m-portlet__head-text">
+															Rincian Kartu Stock Barang
+														</h3>
 													</div>
+													
 												</div>
-
 											</div>
-										</div>	
+										</div>
 									</div>
 									<div class="m-portlet__body">
-										<!--end: Search Form -->
-										<!--begin: Datatable -->
-										<!-- <div class="m_datatable" id="local_data"></div> -->
-										<table class="table" id="tbl_rincian_nota">
+										<div class="form-group m-form__group row">
+											<label  class="col-2 col-form-label">
+												Jenis Barang
+											</label>
+											<div class="col-10">
+												<input disabled="" class="form-control m-input" type="text" value="AC Split Daikin 2 PK Standar" id="jenis_barang">
+											</div>
+										</div>
+										<table class="table" id="tbl_rincian_stock">
 											<thead>
 												<tr>
-													<th>Qty</th>
-													<th>Sat</th>
-													<th>Nama Barang</th>
-													<th>Kategori</th>
-													<th>No Kartu Garansi</th>
-													<th>Harga</th>
-													<th>Jumlah</th>
+													<th>No Seri</th>
+													<th>Tanggal Masuk</th>
+													<th>Tanggal Keluar</th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
-													<td name="jumlah">4</td>
-													<td name="satuan">unit</td>
-													<td name="nama_barang">AC Daikin 1/2 PK Thailand</td>
-													<td name="kategori">Item</td>
-													<td name="no_kartu_garansi">123</td>
-													<td name="Harga">31,640,000</td>
-													<td name="total">126,560,000</td>
+													<td>123123123</td>
+													<td>20/11/19</td>
+													<td>25/11/19</td>
 												</tr>
 												<tr>
-													<td name="jumlah">3</td>
-													<td name="satuan">meter</td>
-													<td name="nama_barang">Pipa</td>
-													<td name="kategori">Material</td>
-													<td name="no_kartu_garansi">123</td>
-													<td name="Harga">30,000</td>
-													<td name="total">75,000</td>
+													<td>134523462</td>
+													<td>20/11/19</td>
+													<td>25/11/19</td>
+												</tr>
+												<tr>
+													<td>987655673</td>
+													<td>20/11/19</td>
+													<td>25/11/19</td>
+												</tr>
+												<tr>
+													<td>098745656</td>
+													<td>20/11/19</td>
+													<td>-</td>
+												</tr>
+												<tr>
+													<td>164553323</td>
+													<td>20/11/19</td>
+													<td>-</td>
 												</tr>
 											</tbody>
 										</table>
-										<table style="width: 100%" class="tg">
-											<tr>
-												<th style="width: 10%" class="tg-s268"></th>
-												<th style="width: 10%" class="tg-s268"></th>
-												<th style="width: 20%" class="tg-s268"></th>
-												<th style="width: 20%" class="tg-s268"></th>
-												<th id="sub_total" align="right" style="width: 25%" class="tg-s268">SUB TOTAL</th>
-												<th style="width: 15%" class="tg-s268">126,635,000</th>
-											</tr>
-											<tr>
-												<th style="width: 10%" class="tg-s268"></th>
-												<th style="width: 10%" class="tg-s268"></th>
-												<th style="width: 20%" class="tg-s268"></th>
-												<th style="width: 20%" class="tg-s268"></th>
-												<th id="ppn" align="right" style="width: 25%" class="tg-s268">PPN 10%</th>
-												<th style="width: 15%" class="tg-s268">12,663,500</th>
-											</tr>
-											<tr>
-												<th style="width: 10%" class="tg-s268"></th>
-												<th style="width: 10%" class="tg-s268"></th>
-												<th style="width: 20%" class="tg-s268"></th>
-												<th style="width: 20%" class="tg-s268"></th>
-												<th id="total" align="right" style="width: 25%" class="tg-s268">TOTAL</th>
-												<th style="width: 15%" class="tg-s268">139,298,500</th>
-											</tr>
-										</table>
-										<!--end: Datatable -->
-										<div style="margin-top: 20px" class="row">
-											<div align="center" class="col-sm">
-												<p><b>Tanda Terima</b></p>
-												<br>
-												<br>
-												<br>
-												<br>
-												<br>
-											</div>
-											<div align="center" class="col-sm">
-												<p><b>Hormat Kami</b></p>
-												<br>
-												<br>
-												<br>
-												<br>
-												<br>
-											</div>
-										</div>
 									</div>
 								</div>
 							</div>
@@ -526,11 +367,8 @@
 		<!--end::Page Vendors -->  
 		<!--begin::Page Snippets -->
 		<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
-
-		<!--end::Page Snippets -->
-		<script src="http://localhost:35729/livereload.js"></script>
 		<script type="text/javascript">
-			var tbl_list_item_masuk = $('#tbl_rincian_nota').mDatatable({
+			var tbl_rincian_stock = $('#tbl_rincian_stock').mDatatable({
 				data: {
 					saveState: {cookie: false},
 					/*type: 'remote',
@@ -569,42 +407,29 @@
 					input: $('#generalSearch'),
 				},
 				columns: [
-
 				{
-					field: 'Qty',
+					field: 'Tanggal Masuk',
 					textAlign: 'center',
-					width: 50,
+					type:'date',
+					format: 'DD/MM/YYYY',
 				},
 				{
-					field: 'Sat',
+					field: 'Tanggal Keluar',
 					textAlign: 'center',
-					width: 50,
+					type:'date',
+					format: 'DD/MM/YYYY',
 				},
-				{
-					field: 'Nama Barang',
-					textAlign: 'center',
-					width: 230,
-				},
-				{
-					field: 'No Kartu Garansi',
-					textAlign: 'center',
-				},
-				{
-					field: 'Jumlah',
-					textAlign: 'center',
-				},
-				{
-					field: 'Harga',
-					textAlign: 'center',
-				},
-				{
-					field: 'Kategori',
+					{
+					field: 'No Seri',
 					textAlign: 'center',
 				}
+
 
 				],
 			});
 		</script>
+		<!--end::Page Snippets -->
+		<script src="http://localhost:35729/livereload.js"></script>
 	</body>
 	<!-- end::Body -->
 	</html>
