--- a/admin_gudang/rincian_stock_toko.html
+++ b/admin_gudang/rincian_stock_toko.html
@@ -271,10 +271,19 @@
 								<div class="m-portlet">
 									<div class="m-portlet__head">
 										<div class="m-portlet__head-caption">
-											<div class="m-portlet__head-title">
-												<h3 class="m-portlet__head-text">
-													Kartu Stock Barang
-												</h3>
+											<div class="m-portlet__head-title col-xl-12">
+												<div style="margin-top: 20px" class=" row">
+													<div class="col-sm">
+														<h3 class="m-portlet__head-text">
+															Kartu Stock Barang
+														</h3>
+													</div>
+													<div align="right" class="col-sm">
+														<button onclick="window.location.href='rincian_stock_barang.html'" class="btn btn-primary">
+															rincian
+														</button>
+													</div>
+												</div>
 											</div>
 										</div>
 									</div>
