--- a/admin_kantor/buat_nota.html
+++ b/admin_kantor/buat_nota.html
@@ -359,23 +359,31 @@
 									</div>
 									<div class="m-portlet__body">
 										<div class="form-group m-form__group row">
-												<label  class="col-3 col-form-label">
-													Tipe Pajak
-												</label>
-												<div class="col-9">
-													<select class="form-control m-input m-input--square" id="tipe_pajak">
-														<option active value="0">
-															--Pilih Tipe Pajak--
-														</option>
-														<option value="1">
-															Pajak
-														</option>
-														<option value="2">
-															Non-Pajak
-														</option>
-													</select>
-												</div>
+											<label  class="col-3 col-form-label">
+												Tipe Pajak
+											</label>
+											<div class="col-9">
+												<select class="form-control m-input m-input--square" id="tipe_pajak">
+													<option active value="0">
+														--Pilih Tipe Pajak--
+													</option>
+													<option value="1">
+														Pajak
+													</option>
+													<option value="2">
+														Non-Pajak
+													</option>
+												</select>
 											</div>
+										</div>
+										<div class="form-group m-form__group row">
+											<label  class="col-3 col-form-label">
+												No. Faktur Pajak
+											</label>
+											<div class="col-9">
+												<input class="form-control m-input" type="text" value="" id="no_faktur_pajak">
+											</div>
+										</div>
 										<div class="form-group m-form__group row">
 											<label class="col-3 col-form-label">
 												Tanggal Jatuh Tempo
@@ -503,7 +511,7 @@
 							</div>
 							<div class="form-group m-form__group row">
 								<label  class="col-3 col-form-label">
-									Nama Item
+									Nama Item/Jasa
 								</label>
 								<div class="col-9">
 									<select style="width: 100%" class="form-control m-select2 dropdown_search select2-hidden-accessible" name="nama_item" tabindex="-1" aria-hidden="true">
@@ -543,6 +551,14 @@
 											Pcs
 										</option>
 									</select>
+								</div>
+							</div>
+							<div class="form-group m-form__group row">
+								<label  class="col-3 col-form-label">
+									No. Kartu Garansi
+								</label>
+								<div class="col-9">
+									<input class="form-control m-input" type="text" value="" id="no_kartu_garansi">
 								</div>
 							</div>
 							<div class="form-group m-form__group row">
