--- a/admin_kantor/print_spk_survey.html
+++ b/admin_kantor/print_spk_survey.html
@@ -56,6 +56,9 @@
 			.table {
 				min-height : 300px !important;
 			}
+			.header-pesanan {
+				font-size: 2rem !important;
+			}
 
 			th {
 				font-size: 1.7rem !important;
@@ -66,7 +69,7 @@
 			}
 
 			p {
-				font-size: 1.8rem !important;
+				font-size: 1.5rem !important;
 			}
 			label {
 				font-size: 1.6rem !important;
@@ -128,7 +131,10 @@
 				<div class="col-xl-12">
 					<div class="m-portlet m-portlet--tab">
 						<div class="m-portlet__head header">
-							<h3 class="header-pesanan">
+							<div style="margin-top: 10px" align="center">
+								<img style="height: auto;width: 280px" src="../assets/demo/default/media/img/misc/logo_print.png">
+							</div>
+							<h3 align="center" class="header-pesanan">
 								SPK SURVEY
 							</h3><br>
 							<h3 name="no_surat_jalan" class="header-pesanan-no"> 
@@ -376,12 +382,12 @@
 								</label>
 								<div class="m-radio-inline">
 									<label class="m-radio">
-										<input disabled="" type="radio" checked="" name="perpihan_customer" value="1">
+										<input disabled="" type="radio" checked="" name="perapihan_customer" value="1">
 										Ya
 										<span></span>
 									</label>
 									<label class="m-radio">
-										<input disabled="" type="radio" name="perpihan_customer" value="2">
+										<input disabled="" type="radio" name="perapihan_customer" value="2">
 										Tidak
 										<span></span>
 									</label>
@@ -460,6 +466,23 @@
 									</div>
 								</div>
 							</div>
+							<div style="margin-top: 20px;" class="m-portlet--mobile row">
+								<p align="justify" >Dengan ini saya telah melakukan survey bersama pihak I dan pihak II. Hasil survey telah disetujui oleh kedua belah pihak dan apabila sudah dikerjakan ada perubahan maka pihak kedua akan dikenakan <b>"Biaya Bongkar Pasang dan Biaya Tambahan Material".</b><br><br>
+								Demikian surat perjanjian / pernyataan ini dibuat oleh kedua belah pihak dan apabila salah satu pihak mengingkari bersedia dituntut sesuai hukum yang berlaku</p>
+								<div align="right" class="col-xl-12">
+									<p>Makassar,  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2018</p>
+								</div>
+								<div align="center" class="col-sm">
+									<p><b>PIHAK I,</b></p>
+									<div style="height: 60px"></div>
+									<div style="width: 15vw;border-bottom: 1px solid black"></div>
+								</div>
+								<div align="center" class="col-sm">
+									<p><b>PIHAK II,</b></p>
+									<div style="height: 60px"></div>
+									<div style="width: 15vw;border-bottom: 1px solid black"></div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>	
@@ -534,7 +557,7 @@
 			});
 		</script>
 		<script type="text/javascript">
-			var delayInMilliseconds = 1000; //1 second
+			var delayInMilliseconds = 800; //1 second
 
 			setTimeout(function() {
 				print();	
