--- a/admin_toko/manajemen_pembayaran.html
+++ b/admin_toko/manajemen_pembayaran.html
@@ -367,7 +367,7 @@
 														<tr>
 															<th>No</th>
 															<th>Tanggal</th>
-															<th>No SPK</th>
+															<th>No Surat</th>
 															<th>Nama Pelanggan</th>
 															<th>No Telpon</th>
 															<th>Aksi</th>
@@ -629,7 +629,7 @@
 					format: 'DD/MM/YYYY',
 				},
 				{
-					field: 'No SPK',
+					field: 'No Surat',
 					textAlign: 'center',
 				},
 				{
