--- a/admin_toko/manajemen_penawaran.html
+++ b/admin_toko/manajemen_penawaran.html
@@ -355,7 +355,7 @@
 													<th>No</th>
 													<th>Tanggal</th>
 													<th>Reff</th>
-													<th>Penerima</th>
+													<th>Kostumer</th>
 													<th>Perihal</th>
 													<th>Aksi</th>
 												</tr>
@@ -513,7 +513,7 @@
 					textAlign: 'center',
 				},
 				{
-					field: 'Penerima',
+					field: 'Kostumer',
 					textAlign: 'center',
 				},
 				{
