--- a/admin_toko/print_spk_survey.html
+++ b/admin_toko/print_spk_survey.html
@@ -382,12 +382,12 @@
 								</label>
 								<div class="m-radio-inline">
 									<label class="m-radio">
-										<input disabled="" type="radio" checked="" name="perpihan_customer" value="1">
+										<input disabled="" type="radio" checked="" name="perapihan_customer" value="1">
 										Ya
 										<span></span>
 									</label>
 									<label class="m-radio">
-										<input disabled="" type="radio" name="perpihan_customer" value="2">
+										<input disabled="" type="radio" name="perapihan_customer" value="2">
 										Tidak
 										<span></span>
 									</label>
